--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,3 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h1 class="jumbotron">MEDLINE by MeSH</h1>
 
 {{outlet}}
